--- a/index.html
+++ b/index.html
@@ -3,47 +3,38 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>kado_template</title>
+        <title>っぴっぴっぴ教</title>
         <link rel="stylesheet" href="template.css">
         <link rel="icon" href="icon.png" sizes="192x192">
         <link rel="apple-touch-icon" href="icon.png" sizes="180x180">
-        <meta name="description" content=" {短文の説明書き} ">
+        <meta name="description" content="っぴっぴっぴ教">
         <meta name="robots" content="noindex, nofollow">
-        <meta property="og:title" content=" {タイトル} ">
+        <meta property="og:title" content="っぴっぴっぴ教">
         <meta property="og:type" content="website">
         <meta property="og:url" content="url">
-        <meta property="og:image" content=" {url_main} ">
-        <meta property="og:description" content=" {タイトル} ">
+        <meta property="og:image" content="https://ppipix3.github.io">
+        <meta property="og:description" content="っぴっぴっぴ">
     </head>
 <body>
     <header class="header">
-        <h2><a href="root.html"> {template} </a></h2>
-<p>template by kado</p>
+        <h2>っぴっぴっぴ教</h2>
     </header>
     <main class="content">
         <section class="page" style="background-image: url('main.jpg');">
             <div class="overlay">
                 <h2>上にスクロールしてみて！！</h2>
-                <h2>contents_1</h2>
-                <p>text_1</p>
             </div>
         </section>
         <section class="page" style="background-image: url('main.jpg');">
             <div class="overlay">
-                <h2>contents_2</h2>
-                <p>text_2</p>
+                <h2>っぴっぴっぴ教の掟</h2>
+                <p>語尾に「ぴ」をつけるっぴ</p>
             </div>
         </section>
         <section class="page" style="background-image: url('main.jpg');">
             <div class="overlay">
-                <h2>contents_3</h2>
-                <p>text_3</p>
-            </div>
-        </section>
-        <section class="page" style="background-image: url('main.jpg');">
-            <div class="overlay">
-                <h2>contents_4</h2>
-                <p><a href=" {url} ">join</a></p>
+                <h2>っぴっぴっぴ教に入るには？</h2>
+                <p><a href="https://line.me/R/msg/text/E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4">送るっぴっぴっぴ</a></p>
             </div>
         </section>
     </main>
