--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="page" style="background-image: url('main.jpg');">
             <div class="overlay">
                 <h2>っぴっぴっぴ教に入るには？</h2>
-                <p><a href="https://line.me/R/msg/text/E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4">送るっぴっぴっぴ</a></p>
+                <p><a href="https://line.me/R/msg/text/%E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4%E3%81%A3%E3%81%B4">送るっぴっぴっぴ</a></p>
             </div>
         </section>
     </main>
